...
            android:layout_margin="25dp"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/shippment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Name: "
            android:inputType="text"
            />

        <EditText
            android:id="@+id/shippment_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shippment_name"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:hint="Phone Number: "
            />

        <EditText
            android:id="@+id/shippment_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shippment_phone_number"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
...
            android:hint="City Name:"
            android:inputType="text"
            />


        <Button
            android:id="@+id/confirm_final_order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="Confirm"
            android:layout_below="@+id/shippment_city"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            />

...
