...
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            />

        <EditText
            android:id="@+id/register_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_applogo"
            android:background="@drawable/input_design"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
...
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/register_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_username_input"
            android:background="@drawable/input_design"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
...
            android:textSize="19sp"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_phone_number_input"
            android:background="@drawable/input_design"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
...
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="19sp"
            />


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password_input"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="17dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="Create Account"
            android:textColor="@android:color/white"
            />

    </RelativeLayout>


...
