...
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/login_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_applogo"
            android:background="@drawable/input_design"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
...
            android:textSize="19sp"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_phone_number_input"
            android:background="@drawable/input_design"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
...
            />




        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_input"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttons"
            android:padding="17dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="Login"
            android:textColor="@color/colorAccent"
            />


        <TextView
            android:id="@+id/admin_panel_link"
...
