...
        android:textSize="20dp"
        android:visibility="gone"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl11"
        android:layout_above="@+id/next_btn">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="Next"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
...
